docs: BootService初始化